# skeleton-finder

./: LICENSE  README.md  setup.cfg
napari-hub/: DESCRIPTION.md
skeleton_finder/: napari.yaml
skeleton_finder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
