[metadata]
name = skeleton-finder
version = 0.0.2
author = Tee Li
url = https://github.com/teeli8/skeleton-finder
classifiers =
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari
    plyfile

[options.package_data]
skeleton-finder = napari.yaml

[options.entry_points]
napari.manifest =
    skeleton-finder = skeleton_finder:napari.yaml

[options.packages.find]
include = graph
