[metadata]
name = skeleton-finder
version = 0.0.2
author = Tee Li
license = BSD-3
url = https://github.com/teeli8/skeleton-finder
python_requires = '>=3.6'
classifiers =
    Operating System :: OS Independent
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari
    plyfile

[options.package_data]
skeleton-finder = napari.yaml

[options.entry_points]
napari.manifest =
    skeleton-finder = skeleton_finder:napari.yaml

[options.packages.find]
include = graph
